--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,4 @@
+2019 11 19 Version 1.3.0  allow to skip bytes or lines after startup
 2019 11 19 Version 1.2.1  allow to only remove 0x00 from output without supplying an empty string
 2019 11 19 Version 1.2.0  added option to also remove 0x00 characters from output
 2019 11 19 Version 1.1.0  added option to remove unwanted characters from output
